@@ -989,15 +989,6 @@ d_parse_file (void)
       aw->addFile (m->srcfile);
     }
   aw->start ();
-  for (size_t i = 0; i < modules.dim; i++)
-    {
-      if (aw->read (i))
-	{
-	  error ("cannot read file %s", m->srcfile->name->toChars ());
-	  goto had_errors;
-	}
-    }
-  AsyncRead::dispose (aw);
 
   // Parse files
   for (size_t i = 0; i < modules.dim; i++)
@@ -1008,7 +999,11 @@ d_parse_file (void)
       if (!Module::rootModule)
 	Module::rootModule = m;
       m->importedFrom = m;
-      //m->deleteObjFile (); // %% driver does this
+      if (aw->read (i))
+	{
+	  error ("cannot read file %s", m->srcfile->name->toChars ());
+	  goto had_errors;
+	}
       m->parse (global.params.dump_source);
       d_gcc_magic_module (m);
       if (m->isDocFile)
@@ -1019,6 +1014,8 @@ d_parse_file (void)
 	  i--;
 	}
     }
+  AsyncRead::dispose (aw);
+
   if (global.errors)
     goto had_errors;
 
@@ -1039,6 +1036,7 @@ d_parse_file (void)
 	  m->genhdrfile ();
 	}
     }
+
   if (global.errors)
     goto had_errors;
 
@@ -1050,6 +1048,7 @@ d_parse_file (void)
 	printf ("importall %s\n", m->toChars ());
       m->importAll (0);
     }
+
   if (global.errors)
     goto had_errors;
 
@@ -1061,6 +1060,7 @@ d_parse_file (void)
 	printf ("semantic  %s\n", m->toChars ());
       m->semantic ();
     }
+
   if (global.errors)
     goto had_errors;
 
@@ -1075,6 +1075,7 @@ d_parse_file (void)
 	printf ("semantic2 %s\n", m->toChars ());
       m->semantic2 ();
     }
+
   if (global.errors)
     goto had_errors;
 
@@ -1086,6 +1087,7 @@ d_parse_file (void)
 	printf ("semantic3 %s\n", m->toChars ());
       m->semantic3 ();
     }
+
   if (global.errors)
     goto had_errors;
 
